# deeprecon

./: README.md  loops.py  main.py  main.sh  pyproject.toml
condor_test_gpu/: condor_submit.submit  cpuonlycondor_submit.submit  env_interactivemode.sh  finalcondor_submit.submit
example_config/: pmt_info.csv  scottexample.yaml  scottnewexample.yaml  test.json  train.json  train.yaml
example_config/train_config/: OnelayDec_FitValidPerData.json  OnelayDec_TwoLayerEnc_FitValidPerData.json
metrics/: metric_monitor.py  metrics.py  recon.py
model/: hitsrecon.py
utils/: config_parse.py  datasets.py  datasets_test.py  jinja.py  train.py  uprootdataset.py  uprootdataset_test.py
wandb/: latest-run
wandb/run-20260310_232038-0qgu36d7/: run-0qgu36d7.wandb
wandb/run-20260310_232038-0qgu36d7/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20260310_232245-lzlu73d5/: run-lzlu73d5.wandb
wandb/run-20260310_232245-lzlu73d5/files/: requirements.txt  wandb-metadata.json
